# cs-bi

./: .gitignore  LICENSE  README.md  cs-bi.cabal  profile
app/: Main.hs
codeGradedProblems/week1/: .Rhistory  frequentWords.hs  make.sh  patternPosition.hs  patterncount.hs  reverseCompliment.hs
src/: BiLib.hs  Lib.hs
test/: Spec.hs
test/fixtures/: skew  test
