name:                cs-bi
version:             0.1.0.0
synopsis:            Bio Informatics Routines
description:         Please see README.md
homepage:            https://github.com/johanjordaan/cs-bi#readme
license:             MIT
license-file:        LICENSE
author:              Johan Jordaan
maintainer:          example@example.com
copyright:           2016 Johan Jordaan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , BiLib
  build-depends:       base >= 4.7 && < 5
                     , MissingH
                     , bytestring
                     , containers
                     , regex-pcre
                     , regex-base
                     , array
  default-language:    Haskell2010

executable cs-bi-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cs-bi
                     , MissingH
                     , bytestring
                     , containers
                     , regex-pcre
                     , regex-base
                     , array
  default-language:    Haskell2010

test-suite cs-bi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cs-bi
                     , hspec
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/johanjordaan/cs-bi
